--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <div #scrollMe class="bs-example" id="messages">
         <div *ngFor="let message of messages | async">
@@ -18,5 +18,7 @@
         <a class="send-message" (click)="sendMessage()">SEND</a>
       </figure>
     </div>
-  </div>
+  </div> -->
+  <h1>Content</h1>
+  <hr>
 </div>
